--- a/apps/web/src/app/page.module.scss
+++ b/apps/web/src/app/page.module.scss
@@ -21,7 +21,17 @@
 
   @media (max-width: 768px) {
     flex-direction: column;
-    padding: 2rem;
+    padding: {
+      inline: 2rem;
+      block: 30%;
+    };
+  }
+
+  @media (min-width: 1600px) {
+    padding: {
+      inline: 20%;
+      block: 15%;
+    };
   }
 
 @media (max-height: 480px) {
@@ -57,7 +67,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 2rem;
+  gap: 1rem;
   width: 100%;
   padding: {
     inline: 2rem;
@@ -108,89 +118,6 @@
 }
 
 
-.pane > textarea {
-  font-family: 'Open Sans', sans-serif;
-  width: 80%;
-  border: 2px solid rgb(20, 0, 73);
-  
-  border-radius: 5px;
-  padding: .5rem 1rem;
-  font-size: 1rem;
-  min-height: 2rem;
-  background: transparent;
-  z-index: 2;
-  color: rgb(20, 0, 73);
-
-  box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0);
-  transition: box-shadow .3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-
-  &::placeholder {
-    color: rgba($color: rgb(20, 0, 73), $alpha: .8)
-  }
-
-  &:focus {
-    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2);
-    outline: none;
-  }
-}
-
-
-.pane > button {
-  border: none;
-  font-family: inherit;
-  font-weight: 700;
-  color: rgb(20, 0, 73);
-  cursor: pointer;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 2rem;
-  width: 5rem;
-  min-height: 2rem;
-  box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2);
-  border-radius: 5px;
-  position: relative;
-  z-index: 1;
-  background: inherit;
-  overflow: hidden;
-  transition: all .3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-
-  &:hover {
-    scale: 1.1;
-    
-  } 
-
-  &:active, &:focus {
-   scale: .9;
-   box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .1);
-
-  }
-
-  &:disabled {
-    scale: 1;
-    opacity: .5;
-    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2);
-    cursor: not-allowed;
-  }
-
-  
-
-
-  &:before {
-    content: "";
-    position: absolute;
-    background: inherit;
-    z-index: -1;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    box-shadow: inset 0 0 2000px rgba(255, 255, 255, .2);
-    filter: blur(10px);
-    margin: -20px;
-  }
-}
 
 
 .pane pre {
@@ -204,4 +131,11 @@
     word-break: keep-all !important;
     white-space: pre-line;
   }
+
+
+  @media (max-width: 768px) {
+    font-size: .8rem;
+  }
+    
+  
 }
